--- a/app/css/style.css
+++ b/app/css/style.css
@@ -174,10 +174,10 @@ header .wrap .header-top .main-menu li a:hover {
     color: #fff;
     display: block;
   }
-  header .wrap .header-top #burger:checked + nav[role="navigation"] .main-menu {
+  header .wrap .header-top #burger:checked + nav .main-menu {
     display: block;
   }
-  header .wrap .header-top #burger:checked + nav[role="navigation"] .nav-burger:after {
+  header .wrap .header-top #burger:checked + nav .nav-burger:after {
     content: attr(data-close);
   }
 }
