--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -129,7 +129,7 @@ header {
         }
         #burger {
           &:checked {
-          & + nav[role="navigation"]{
+          & + nav {
           & .main-menu {
             display: block;
               }
@@ -138,7 +138,7 @@ header {
         }
         #burger {
           &:checked {
-            & + nav[role="navigation"]{
+            & + nav {
               & .nav-burger {
                 &:after {
                   content: attr(data-close);
