--- a/app/css/style.css
+++ b/app/css/style.css
@@ -402,7 +402,7 @@ p {
   max-width: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  padding: 100px 0 160px 0;
+  padding: 100px 0 60px 0;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -507,6 +507,30 @@ p {
   position: absolute;
   top: 78px;
   left: 626px;
+}
+
+.clients .clients-wrap .logos {
+  width: 940px;
+  margin: 150px auto 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 100%;
+}
+
+.clients .clients-wrap .logos .logos-icon {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-justify-content: space-around;
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
+  width: 100%;
 }
 
 @media screen and (max-width: 767px) {
