--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -219,7 +219,7 @@ p {
     margin: 0 auto;
     max-width: 100%;
     box-sizing: border-box;
-    padding: 100px 0 160px 0;
+    padding: 100px 0 60px 0;
     display: flex;
     flex-direction: column; }
     .clients .clients-wrap .awesome-clients h2, .clients .clients-wrap .awesome-clients p {
@@ -276,6 +276,16 @@ p {
           position: absolute;
           top: 78px;
           left: 626px; }
+    .clients .clients-wrap .logos {
+      width: 940px;
+      margin: 150px auto 0;
+      display: flex;
+      max-width: 100%; }
+      .clients .clients-wrap .logos .logos-icon {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        width: 100%; }
 
 @media screen and (max-width: 767px) {
   .clients-wrap .feedback .photo {
