--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 
-div {
+div, input, textarea {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -708,5 +708,172 @@ p {
 @media screen and (max-width: 549px) {
   .person-2 {
     margin-top: 65px;
+  }
+}
+
+footer {
+  background: #7690c5;
+  padding-top: 100px;
+}
+
+footer .footer-wrap {
+  width: 940px;
+  margin: 0 auto;
+  max-width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-bottom: 1px solid #87a0d2;
+  padding-bottom: 100px;
+}
+
+footer .footer-wrap .footer-title {
+  color: #fff;
+  -webkit-flex-basis: 520px;
+      -ms-flex-preferred-size: 520px;
+          flex-basis: 520px;
+}
+
+footer .footer-wrap .footer-title .say-hello h2 {
+  line-height: 1;
+  margin-bottom: 20px;
+}
+
+footer .footer-wrap .footer-title .say-hello p {
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+footer .footer-wrap .footer-title .contact {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+footer .footer-wrap .footer-title .contact ul {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+footer .footer-wrap .footer-title .contact ul li {
+  -webkit-flex-basis: 220px;
+      -ms-flex-preferred-size: 220px;
+          flex-basis: 220px;
+  font-size: 18px;
+  margin-top: 40px;
+}
+
+footer .footer-wrap .footer-title .contact ul li a {
+  color: #fff;
+}
+
+footer .footer-wrap .footer-title .contact ul li a i {
+  display: inline-block;
+  width: 30px;
+}
+
+footer .footer-wrap .footer-form {
+  padding-left: 13px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+footer .footer-wrap .footer-form form input, footer .footer-wrap .footer-form form textarea {
+  width: 100%;
+  height: 52px;
+  margin-top: 27px;
+  border: 1px solid #cccccc;
+  -webkit-border-radius: 3px;
+          border-radius: 3px;
+  padding-left: 20px;
+}
+
+footer .footer-wrap .footer-form form input[type="text"] {
+  margin-top: 0;
+}
+
+footer .footer-wrap .footer-form form textarea {
+  height: 210px;
+  padding-top: 15px;
+}
+
+footer .footer-wrap .footer-form form inpit-placeholder {
+  color: red;
+}
+
+footer .copyright {
+  width: 940px;
+  margin: 0 auto;
+  max-width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 32px 0;
+}
+
+footer .copyright p {
+  color: #fff;
+  font-size: 16px;
+}
+
+@media screen and (max-width: 991px) {
+  .footer-wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer-wrap .footer-title {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-flex-basis: 365px !important;
+        -ms-flex-preferred-size: 365px !important;
+            flex-basis: 365px !important;
+  }
+  .footer-wrap .footer-title .contact ul {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .footer-wrap .footer-title .contact ul li {
+    -webkit-flex-basis: 0;
+        -ms-flex-preferred-size: 0;
+            flex-basis: 0;
   }
 }
