--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,7 +3,7 @@
   padding: 0;
 }
 
-div {
+div, input, textarea {
   box-sizing: border-box;
 }
 
@@ -521,4 +521,119 @@ p {
   .person-2 {
     margin-top: 65px;
   }
+}
+
+
+
+footer {
+  background: #7690c5;
+  padding-top: 100px;
+  .footer-wrap {
+    width: 940px;
+    margin: 0 auto;
+    max-width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #87a0d2;
+    padding-bottom: 100px;
+    .footer-title {
+      color: #fff;
+      flex-basis: 520px;
+      .say-hello {
+        h2 {
+          line-height: 1;
+          margin-bottom: 20px;
+        }
+        p {
+          color: #fff;
+          margin-bottom: 10px;
+        }
+      }
+      .contact {
+        display: flex;
+        ul {
+          display: flex;
+          flex-wrap: wrap;
+          flex-direction: row;
+          li {
+            flex-basis: 220px;
+            font-size: 18px;
+            margin-top: 40px;
+            a {
+              color: #fff;
+              i {
+                display: inline-block;
+                width: 30px;
+              }
+            }
+          }
+        }
+      }
+    }
+    .footer-form {
+      padding-left: 13px;
+      display: flex;
+      form {
+        input, textarea {
+          width: 100%;
+          height: 52px;
+          margin-top: 27px;
+          border: 1px solid #cccccc;
+          border-radius: 3px;
+          padding-left: 20px;
+        }
+        input[type="text"] {
+          margin-top: 0;
+        }
+        input[type="email"] {
+        }
+        textarea {
+          height: 210px;
+          padding-top: 15px;
+        }
+        inpit-placeholder {
+          color: red;
+        }
+      }
+    }
+  }
+  .copyright {
+    width: 940px;
+    margin: 0 auto;
+    max-width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    padding: 32px 0;
+    p {
+      color: #fff;
+      font-size: 16px;
+    }
+  }
+}
+
+@media screen and(max-width: 991px) {
+  .footer-wrap {
+    flex-direction: column;
+    .say-hello {
+
+    }
+    .footer-title {
+      display: flex;
+      flex-direction: column;
+      flex-basis: 365px !important;
+      .contact {
+        ul {
+          display: flex;
+          li {
+            flex-basis: 0;
+          }
+        }
+      }
+    }
+    .footer-form {
+    }
+  }
+
 }
